<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Lagana Chart -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/lagna_chart"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/lagna_chart_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horoscope_chart_height"
            android:layout_gravity="center" />

        <!-- Moon Chart -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/moon_chart"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/moon_chart_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horoscope_chart_height"
            android:layout_gravity="center" />

        <!-- Navanash Chart -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/navansh_chart"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/navansh_chart_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horoscope_chart_height"
            android:layout_gravity="center" />

        <!-- Chalit Chart -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/chalit_chart"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/chalit_chart_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horoscope_chart_height"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
