<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/base_image_background_layout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/chat_topic_message_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white_transparent_70"
        app:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/chat_topic_message_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/questions_people_have_asking_astrobuddy"
            android:textColor="@color/gunmetal"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/start_chat_button"
        android:layout_below="@+id/chat_topic_message_card">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_topics_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/chat_topics_row_layout" />

        <ProgressBar
            android:id="@+id/chat_topics_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_chat_topics_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/no_chat_topics_available"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone" />
    </FrameLayout>

    <Button
        android:id="@+id/start_chat_button"
        style="@style/squareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/start_chat" />

</RelativeLayout>