<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_20sdp">

        <include layout="@layout/base_image_background_layout" />

    <LinearLayout
        android:id="@+id/old_password_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            style="@style/LoginRegisterImageView"
            app:srcCompat="@drawable/ic_lock_black_24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_old_password"
            style="@style/commonEditText"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/enter_old_pin"
            android:imeOptions="actionNext"
            android:maxLength="4"
            android:singleLine="true"
            android:digits="@string/password_regex"
            android:inputType="numberPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_password_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_password_section"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            style="@style/LoginRegisterImageView"
            app:srcCompat="@drawable/ic_lock_black_24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_new_password"
            style="@style/commonEditText"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/enter_4_digit_pin"
            android:maxLength="4"
            android:singleLine="true"
            android:digits="@string/password_regex"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_new_password_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password_section"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/password_icon"
            style="@style/LoginRegisterImageView"
            app:srcCompat="@drawable/ic_lock_black_24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_confirm_new_password"
            style="@style/commonEditText"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/confirm_4_digit_pin"
            android:imeOptions="actionDone"
            android:maxLength="4"
            android:singleLine="true"
            android:digits="@string/password_regex"
            android:inputType="numberPassword"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/change_password_submit_button"
        style="@style/squareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_new_password_section"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingLeft="@dimen/_50sdp"
        android:paddingRight="@dimen/_50sdp"
        android:text="Submit" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>