<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_image_background_layout" />


    <ImageView
        android:id="@+id/forgot_password_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_with_name_height"
        android:src="@drawable/ic_logo_with_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/forgot_password_label"
        style="@style/commonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Reset Password"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/forgot_password_message"
        style="@style/commonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_label"
        android:layout_centerHorizontal="true"
        android:maxLines="2"
        android:text="Enter the OTP and new password below\nto reset a password."
        android:textAlignment="center"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/otp_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_message"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            style="@style/LoginRegisterImageView"
            app:srcCompat="@drawable/ic_lock_black_24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_otp"
            style="@style/commonEditText"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/enter_otp"
            android:imeOptions="actionNext"
            android:maxLength="4"
            android:singleLine="true"
            android:digits="@string/password_regex"
            android:inputType="numberPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_password_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_section"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            style="@style/LoginRegisterImageView"
            app:srcCompat="@drawable/ic_lock_black_24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_new_password"
            style="@style/commonEditText"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:maxLength="4"
            android:singleLine="true"
            android:digits="@string/password_regex"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_new_password_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password_section"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/password_icon"
            style="@style/LoginRegisterImageView"
            app:srcCompat="@drawable/ic_lock_black_24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enter_confirm_new_password"
            style="@style/commonEditText"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:maxLength="4"
            android:singleLine="true"
            android:digits="@string/password_regex"
            android:inputType="numberPassword"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/password_submit_button"
        style="@style/squareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_new_password_section"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingLeft="@dimen/_50sdp"
        android:paddingRight="@dimen/_50sdp"
        android:text="Reset" />

</RelativeLayout>